--- a/examples/SamplesContainer.ipynb
+++ b/examples/SamplesContainer.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1a199e873a0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x241ef1e4a30>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -64,7 +64,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='Samples+Table.csv', content=b'ID,Created Date,Description,Comments,Amount,Attached Docs,Template\\r\\nSample-1776,2022-06-13T13:54:43.380521116Z,,1111,,0,Sample\\r\\nSample-1777,2022-06-13T13:55:51.211451408Z,555,1111,,0,Sample\\r\\nSample-1778,2022-06-13T13:59:34.535249108Z,,1111,,0,Sample\\r\\nSample-1779,2022-06-13T14:00:31.649713156Z,,1111,,0,Sample\\r\\nSample-1781,2022-06-14T09:51:10.942740735Z,,1111,,0,Sample\\r\\n', content_type='text/csv')"
+      "text/plain": "File(name='Samples+Table.csv', content=b'ID,Created Date,Description,Comments,Amount,Attached Docs,Template\\r\\nSample-1776,2022-06-13T13:54:43.380521116Z,,888,,0,Sample\\r\\nSample-1777,2022-06-13T13:55:51.211451408Z,555,888,,0,Sample\\r\\nSample-1778,2022-06-13T13:59:34.535249108Z,,888,,0,Sample\\r\\nSample-1779,2022-06-13T14:00:31.649713156Z,,888,,0,Sample\\r\\nSample-1781,2022-06-14T09:51:10.942740735Z,,888,,0,Sample\\r\\n', content_type='text/csv')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -89,14 +89,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\d.cherednichenko\\AppData\\Local\\Temp\\ipykernel_28816\\3925987743.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\d.cherednichenko\\AppData\\Local\\Temp\\ipykernel_24920\\3925987743.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n<div class=\"table-wrapper\" style=\"margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;\">\n    <div class=\"table-scroll\">\n        <h2>Samples Table</h2>\n        <table>\n            <thead>\n                <tr>\n                \n                    <th>ID</th>\n                \n                    <th>Created Date</th>\n                \n                    <th>Description</th>\n                \n                    <th>Comments</th>\n                \n                    <th>Amount</th>\n                \n                    <th>Attached Docs</th>\n                \n                    <th>Template</th>\n                \n                </tr>\n            </thead>\n            <tbody>\n            \n                <tr>\n                \n                    <td>Sample-1776</td>\n                \n                    <td>2022-06-13T13:54:43.380521116Z</td>\n                \n                    <td></td>\n                \n                    <td>1111</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1777</td>\n                \n                    <td>2022-06-13T13:55:51.211451408Z</td>\n                \n                    <td>555</td>\n                \n                    <td>1111</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1778</td>\n                \n                    <td>2022-06-13T13:59:34.535249108Z</td>\n                \n                    <td></td>\n                \n                    <td>1111</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1779</td>\n                \n                    <td>2022-06-13T14:00:31.649713156Z</td>\n                \n                    <td></td>\n                \n                    <td>1111</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1781</td>\n                \n                    <td>2022-06-14T09:51:10.942740735Z</td>\n                \n                    <td></td>\n                \n                    <td>1111</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n            </tbody>\n        </table>\n    </div>\n</div>\n"
+      "text/html": "\n<div class=\"table-wrapper\" style=\"margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;\">\n    <div class=\"table-scroll\">\n        <h2>Samples Table</h2>\n        <table>\n            <thead>\n                <tr>\n                \n                    <th>ID</th>\n                \n                    <th>Created Date</th>\n                \n                    <th>Description</th>\n                \n                    <th>Comments</th>\n                \n                    <th>Amount</th>\n                \n                    <th>Attached Docs</th>\n                \n                    <th>Template</th>\n                \n                </tr>\n            </thead>\n            <tbody>\n            \n                <tr>\n                \n                    <td>Sample-1776</td>\n                \n                    <td>2022-06-13T13:54:43.380521116Z</td>\n                \n                    <td></td>\n                \n                    <td>888</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1777</td>\n                \n                    <td>2022-06-13T13:55:51.211451408Z</td>\n                \n                    <td>555</td>\n                \n                    <td>888</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1778</td>\n                \n                    <td>2022-06-13T13:59:34.535249108Z</td>\n                \n                    <td></td>\n                \n                    <td>888</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1779</td>\n                \n                    <td>2022-06-13T14:00:31.649713156Z</td>\n                \n                    <td></td>\n                \n                    <td>888</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1781</td>\n                \n                    <td>2022-06-14T09:51:10.942740735Z</td>\n                \n                    <td></td>\n                \n                    <td>888</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n            </tbody>\n        </table>\n    </div>\n</div>\n"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -149,7 +149,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:fa34c835-6271-4c59-b320-ff26089e89c6', digest='33271967', name='Sample-1776', description='', created_at=datetime.datetime(2022, 6, 13, 13, 54, 43, 40000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 10, 39, 32, 829000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', digest='11131716', name='Sample-1777', description='', created_at=datetime.datetime(2022, 6, 13, 13, 55, 51, 150000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 10, 39, 35, 415000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:3ef80703-612e-465a-b930-f3e154dd1937', digest='59374143', name='Sample-1778', description='', created_at=datetime.datetime(2022, 6, 13, 13, 59, 34, 447000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 10, 39, 38, 27000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:20080759-ae7b-4529-972b-85a089f9e6fd', digest='43899128', name='Sample-1779', description='', created_at=datetime.datetime(2022, 6, 13, 14, 0, 31, 590000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 10, 39, 40, 451000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', digest='83157268', name='Sample-1781', description='', created_at=datetime.datetime(2022, 6, 14, 9, 51, 10, 765000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 10, 39, 42, 803000, tzinfo=datetime.timezone.utc))]"
+      "text/plain": "[Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:fa34c835-6271-4c59-b320-ff26089e89c6', digest='49034061', name='Sample-1776', description='', created_at=datetime.datetime(2022, 6, 13, 13, 54, 43, 40000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 15, 56, 141000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', digest='14848652', name='Sample-1777', description='', created_at=datetime.datetime(2022, 6, 13, 13, 55, 51, 150000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 15, 58, 745000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:3ef80703-612e-465a-b930-f3e154dd1937', digest='81002360', name='Sample-1778', description='', created_at=datetime.datetime(2022, 6, 13, 13, 59, 34, 447000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 16, 1, 589000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:20080759-ae7b-4529-972b-85a089f9e6fd', digest='46039662', name='Sample-1779', description='', created_at=datetime.datetime(2022, 6, 13, 14, 0, 31, 590000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 16, 4, 576000, tzinfo=datetime.timezone.utc)),\n Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', digest='45199162', name='Sample-1781', description='', created_at=datetime.datetime(2022, 6, 14, 9, 51, 10, 765000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 16, 7, 408000, tzinfo=datetime.timezone.utc))]"
      },
      "execution_count": 8,
      "metadata": {},
@@ -171,10 +171,10 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "NEW_VALUE = '1111'\n",
+    "NEW_VALUE = '999'\n",
     "for sample in samples:\n",
     "    created_properties = sample.properties\n",
-    "    created_properties[6].set_value(NEW_VALUE)"
+    "    sample[6].set_content_value(NEW_VALUE)"
    ],
    "metadata": {
     "collapsed": false,
@@ -191,23 +191,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "True\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "True\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "True\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "True\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "True\n"
      ]
     }
    ],
    "source": [
     "for sample in samples:\n",
-    "    print(sample.properties[6])\n",
-    "    print(sample.properties[6].is_changed)"
+    "    print(sample[6])\n",
+    "    print(sample[6].is_changed)"
    ],
    "metadata": {
     "collapsed": false,
@@ -238,11 +238,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1111\n",
-      "1111\n",
-      "1111\n",
-      "1111\n",
-      "1111\n"
+      "999\n",
+      "999\n",
+      "999\n",
+      "999\n",
+      "999\n"
      ]
     }
    ],
@@ -251,8 +251,8 @@
     "samples = list(samples_generator)\n",
     "\n",
     "for sample in samples:\n",
-    "    print(sample.properties[6].content.value)\n",
-    "    assert sample.properties[6].content.value == NEW_VALUE"
+    "    print(sample[6].content_value)\n",
+    "    assert sample[6].content_value == NEW_VALUE"
    ],
    "metadata": {
     "collapsed": false,
@@ -275,7 +275,7 @@
       "id='digests.external' name=None content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
       "id='1' name='Created Date' content=CellPropertyContent(value='2022-06-13T13:54:43.380521116Z', name=None, eid=None, values=None)\n",
       "id='2' name='Description' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='1111', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
       "id='4' name='Amount' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
       "id='10' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='sample:fa34c835-6271-4c59-b320-ff26089e89c6', values=None)\n",
       "id='sampleId' name='ID' content=CellPropertyContent(value='sample:fa34c835-6271-4c59-b320-ff26089e89c6', name=None, eid=None, values=None)\n",
@@ -337,18 +337,6 @@
     "# Get any property of sample from Container\n",
     "samplesContainer[0]['b718adec-73e0-3ce3-ac72-0dd11a06a308']"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
